--- a/app/assets/stylesheets/restaurants.scss
+++ b/app/assets/stylesheets/restaurants.scss
@@ -49,7 +49,16 @@ a i:hover {
   @include outer-container;
 }
 
+
 #new_review_button {
-  @include span-columns(2);
-  @include shift(5);
+  display: block;
+  margin-right: 2.35765%;
+  width: 14.70196%;
+  margin-left: 42.64902%;
+  margin-bottom: 5em;
+}
+
+.ratings {
+  margin: 0 auto !important;
+  float: none !important;
 }
